tests/fail/t02.e
Wrong type in variable declaration (void arr[10])
